python/lapack_like/factor.py


lib.ElSolveAfterLDL_s.argtypes = \
lib.ElSolveAfterLDL_d.argtypes = \
lib.ElSolveAfterLDLDist_s.argtypes = \
lib.ElSolveAfterLDLDist_d.argtypes = \
  [c_void_p,c_void_p]

lib.ElSolveAfterLDL_c.argtypes = \
lib.ElSolveAfterLDL_z.argtypes = \
lib.ElSolveAfterLDLDist_c.argtypes = \
lib.ElSolveAfterLDLDist_z.argtypes = \
  [c_void_p,c_void_p,bType]

def SolveAfterLDL(A,B,conjugate=True):
  if type(A) is not type(B):
    raise Exception('Types of A and B must match')
  if A.tag != B.tag:
    raise Exception('Datatypes of A and B must match')
  args = [A.obj,B.obj]
  argsCpx = [A.obj,B.obj,conjugate]
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElSolveAfterLDL_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterLDL_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterLDL_c(*argsCpx)
    elif A.tag == zTag: lib.ElSolveAfterLDL_z(*argsCpx)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElSolveAfterLDLDist_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterLDLDist_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterLDLDist_c(*argsCpx)
    elif A.tag == zTag: lib.ElSolveAfterLDLDist_z(*argsCpx)
    else: DataExcept()
  else: TypeExcept()

def SolveAfterLDLPiv(A,dSub,p,B,conjugate=True):
  if type(A) is not type(dSub) or type(dSub) is not type(B):
    raise Exception('Types of {A,dSub,B} must match')
  if A.tag != dSub.tag or dSub.tag != B.tag:
    raise Exception('Datatypes of {A,dSub,B} must match')
  args = [A.obj,dSub.obj,p.obj,B.obj]
  argsCpx = [A.obj,dSub.obj,p.obj,B.obj,conjugate]
  if type(A) is Matrix:
    if type(p) is not Permutation:
      raise Exception('Expected p to be a Permutation')
    if   A.tag == sTag: lib.ElSolveAfterLDLPiv_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterLDLPiv_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterLDLPiv_c(*argsCpx)
    elif A.tag == zTag: lib.ElSolveAfterLDLPiv_z(*argsCpx)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if type(p) is not DistPermutation:
      raise Exception('Expected p to be a DistPermutation')
    if   A.tag == sTag: lib.ElSolveAfterLDLPivDist_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterLDLPivDist_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterLDLPivDist_c(*argsCpx)
    elif A.tag == zTag: lib.ElSolveAfterLDLPivDist_z(*argsCpx)
    else: DataExcept()
  else: TypeExcept()

lib.ElMultiplyAfterLDL_s.argtypes = \
lib.ElMultiplyAfterLDL_d.argtypes = \
lib.ElMultiplyAfterLDLDist_s.argtypes = \
lib.ElMultiplyAfterLDLDist_d.argtypes = \
  [c_void_p,c_void_p]

lib.ElMultiplyAfterLDL_c.argtypes = \
lib.ElMultiplyAfterLDL_z.argtypes = \
lib.ElMultiplyAfterLDLDist_c.argtypes = \
lib.ElMultiplyAfterLDLDist_z.argtypes = \
  [c_void_p,c_void_p,bType]

def MultiplyAfterLDL(A,B,conjugate=True):
  if type(A) is not type(B):
    raise Exception('Types of A and B must match')
  if A.tag != B.tag:
    raise Exception('Datatypes of A and B must match')
  args = [A.obj,B.obj]
  argsCpx = [A.obj,B.obj,conjugate]
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElMultiplyAfterLDL_s(*args)
    elif A.tag == dTag: lib.ElMultiplyAfterLDL_d(*args)
    elif A.tag == cTag: lib.ElMultiplyAfterLDL_c(*argsCpx)
    elif A.tag == zTag: lib.ElMultiplyAfterLDL_z(*argsCpx)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElMultiplyAfterLDLDist_s(*args)
    elif A.tag == dTag: lib.ElMultiplyAfterLDLDist_d(*args)
    elif A.tag == cTag: lib.ElMultiplyAfterLDLDist_c(*argsCpx)
    elif A.tag == zTag: lib.ElMultiplyAfterLDLDist_z(*argsCpx)
    else: DataExcept()
  else: TypeExcept()

lib.ElMultiplyAfterLDLPiv_s.argtypes = \
lib.ElMultiplyAfterLDLPiv_d.argtypes = \
lib.ElMultiplyAfterLDLPivDist_s.argtypes = \
lib.ElMultiplyAfterLDLPivDist_d.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p]

lib.ElMultiplyAfterLDLPiv_c.argtypes = \
lib.ElMultiplyAfterLDLPiv_z.argtypes = \
lib.ElMultiplyAfterLDLPivDist_c.argtypes = \
lib.ElMultiplyAfterLDLPivDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,bType]

def MultiplyAfterLDLPiv(A,dSub,p,B,conjugate=True):
  if type(A) is not type(dSub) or type(dSub) is not type(B):
    raise Exception('Types of {A,dSub,B} must match')
  if A.tag != dSub.tag or dSub.tag != B.tag:
    raise Exception('Datatypes of {A,dSub,B} must match')
  args = [A.obj,dSub.obj,p.obj,B.obj]
  argsCpx = [A.obj,dSub.obj,p.obj,B.obj,conjugate]
  if type(A) is Matrix:
    if type(p) is not Permutation:
      raise Exception('Expected p to be a Permutation')
    if   A.tag == sTag: lib.ElMultiplyAfterLDLPiv_s(*args)
    elif A.tag == dTag: lib.ElMultiplyAfterLDLPiv_d(*args)
    elif A.tag == cTag: lib.ElMultiplyAfterLDLPiv_c(*argsCpx)
    elif A.tag == zTag: lib.ElMultiplyAfterLDLPiv_z(*argsCpx)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if type(p) is not DistPermutation:
      raise Exception('Expected p to be a DistPermutation')
    if   A.tag == sTag: lib.ElMultiplyAfterLDLPivDist_s(*args)
    elif A.tag == dTag: lib.ElMultiplyAfterLDLPivDist_d(*args)
    elif A.tag == cTag: lib.ElMultiplyAfterLDLPivDist_c(*argsCpx)
    elif A.tag == zTag: lib.ElMultiplyAfterLDLPivDist_z(*argsCpx)
    else: DataExcept()
  else: TypeExcept()

# Regularized Quasi-Semidefinite LDL^H factorization
# ==================================================

# Emulate an enum for the Regularized LDL solve/refinement
(REG_SOLVE_FGMRES,REG_SOLVE_LGMRES)=(0,1)

lib.ElRegSolveCtrlDefault_s.argtypes = \
lib.ElRegSolveCtrlDefault_d.argtypes = \
  [c_void_p]
class RegSolveCtrl_s(ctypes.Structure):
  _fields_ = [("alg",c_uint),("relTol",sType),("relTolRefine",sType),
              ("maxIts",iType),("maxRefineIts",iType),("restart",iType),
              ("progress",bType),("time",bType)]
  def __init__(self):
    lib.ElRegSolveCtrlDefault_s(pointer(self))
class RegSolveCtrl_d(ctypes.Structure):
  _fields_ = [("alg",c_uint),("relTol",dType),("relTolRefine",dType),
              ("maxIts",iType),("maxRefineIts",iType),("restart",iType),
              ("progress",bType),("time",bType)]
  def __init__(self):
    lib.ElRegSolveCtrlDefault_d(pointer(self))

# TODO: Wrappers for the factorization and solve

# LU factorization
# ================

# Emulate an enum for the pivot type for LU factorization
(LU_PARTIAL,LU_FULL,LU_ROOK,LU_WITHOUT_PIVOTING)=(0,1,2,3)

lib.ElLU_s.argtypes = \
lib.ElLU_d.argtypes = \
lib.ElLU_c.argtypes = \
lib.ElLU_z.argtypes = \
lib.ElLUDist_s.argtypes = \
lib.ElLUDist_d.argtypes = \
lib.ElLUDist_c.argtypes = \
lib.ElLUDist_z.argtypes = \
  [c_void_p]

lib.ElLUPartialPiv_s.argtypes = \
lib.ElLUPartialPiv_d.argtypes = \
lib.ElLUPartialPiv_c.argtypes = \
lib.ElLUPartialPiv_z.argtypes = \
lib.ElLUPartialPivDist_s.argtypes = \
lib.ElLUPartialPivDist_d.argtypes = \
lib.ElLUPartialPivDist_c.argtypes = \
lib.ElLUPartialPivDist_z.argtypes = \
  [c_void_p,c_void_p]

lib.ElLUFullPiv_s.argtypes = \
lib.ElLUFullPiv_d.argtypes = \
lib.ElLUFullPiv_c.argtypes = \
lib.ElLUFullPiv_z.argtypes = \
lib.ElLUFullPivDist_s.argtypes = \
lib.ElLUFullPivDist_d.argtypes = \
lib.ElLUFullPivDist_c.argtypes = \
lib.ElLUFullPivDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p]

def LU(A,pivType=LU_PARTIAL):
  if type(A) is Matrix: 
    if pivType == LU_WITHOUT_PIVOTING:
      args = [A.obj]
      if   A.tag == sTag: lib.ElLU_s(*args)
      elif A.tag == dTag: lib.ElLU_d(*args)
      elif A.tag == cTag: lib.ElLU_c(*args)
      elif A.tag == zTag: lib.ElLU_z(*args)
      else: DataExcept()
    elif pivType == LU_PARTIAL:
      P = Permutation()
      args = [A.obj,P.obj]
      if   A.tag == sTag: lib.ElLUPartialPiv_s(*args)
      elif A.tag == dTag: lib.ElLUPartialPiv_d(*args)
      elif A.tag == cTag: lib.ElLUPartialPiv_c(*args)
      elif A.tag == zTag: lib.ElLUPartialPiv_z(*args)
      else: DataExcept()
      return P
    elif pivType == LU_FULL:
      P = Permutation()
      Q = Permutation()
      args = [A.obj,P.obj,Q.obj]
      if   A.tag == sTag: lib.ElLUFullPiv_s(*args)
      elif A.tag == dTag: lib.ElLUFullPiv_d(*args)
      elif A.tag == cTag: lib.ElLUFullPiv_c(*args)
      elif A.tag == zTag: lib.ElLUFullPiv_z(*args)
      else: DataExcept()
      return P, Q
    else: raise Exception('Unsupported pivot type')
  elif type(A) is DistMatrix:
    if pivType == LU_WITHOUT_PIVOTING:
      args = [A.obj]
      if   A.tag == sTag: lib.ElLUDist_s(*args)
      elif A.tag == dTag: lib.ElLUDist_d(*args)
      elif A.tag == cTag: lib.ElLUDist_c(*args)
      elif A.tag == zTag: lib.ElLUDist_z(*args)
      else: DataExcept()
    elif pivType == LU_PARTIAL:
      P = DistPermutation(A.Grid())
      args = [A.obj,P.obj]
      if   A.tag == sTag: lib.ElLUPartialPivDist_s(*args)
      elif A.tag == dTag: lib.ElLUPartialPivDist_d(*args)
      elif A.tag == cTag: lib.ElLUPartialPivDist_c(*args)
      elif A.tag == zTag: lib.ElLUPartialPivDist_z(*args)
      else: DataExcept()
      return P
    elif pivType == LU_FULL:
      P = DistPermutation(A.Grid())
      Q = DistPermutation(A.Grid())
      args = [A.obj,P.obj,Q.obj]
      if   A.tag == sTag: lib.ElLUFullPivDist_s(*args)
      elif A.tag == dTag: lib.ElLUFullPivDist_d(*args)
      elif A.tag == cTag: lib.ElLUFullPivDist_c(*args)
      elif A.tag == zTag: lib.ElLUFullPivDist_z(*args)
      else: DataExcept()
      return P, Q
    else: raise Exception('Unsupported pivot type')
  else: TypeExcept()

# LEFT OFF HERE

lib.ElLUMod_s.argtypes = \
lib.ElLUMod_c.argtypes = \
lib.ElLUModDist_s.argtypes = \
lib.ElLUModDist_c.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,sType]

lib.ElLUMod_d.argtypes = \
lib.ElLUMod_z.argtypes = \
lib.ElLUModDist_d.argtypes = \
lib.ElLUModDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,dType]

def LUMod(A,P,u,v,conjugate=True,tau=0.1):
  if type(A) is not type(u) or type(u) is not type(v):
    raise Exception('Types of {A,u,v} must be equal')
  if A.tag != u.tag or u.tag != v.tag:
    raise Exception('Datatypes of {A,u,v} must be equal')
  args = [A.obj,P.obj,u.obj,v.obj,tau]
  argsCpx = [A.obj,P.obj,u.obj,v.obj,conjugate,tau]
  if type(A) is Matrix:
    if type(P) is not Permutation:
      raise Exception('Expected P to be a Permutation')
    if   A.tag == sTag: lib.ElLUMod_s(*args)
    elif A.tag == dTag: lib.ElLUMod_d(*args)
    elif A.tag == cTag: lib.ElLUMod_c(*argsCpx)
    elif A.tag == zTag: lib.ElLUMod_z(*argsCpx)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if type(P) is not DistPermutation:
      raise Exception('Expected P to be a DistPermutation')
    if   A.tag == sTag: lib.ElLUModDist_s(*args)
    elif A.tag == dTag: lib.ElLUModDist_d(*args)
    elif A.tag == cTag: lib.ElLUModDist_c(*argsCpx)
    elif A.tag == zTag: lib.ElLUModDist_z(*argsCpx)
    else: DataExcept()
  else: TypeExcept()

lib.ElSolveAfterLU_s.argtypes = \
lib.ElSolveAfterLU_d.argtypes = \
lib.ElSolveAfterLU_c.argtypes = \
lib.ElSolveAfterLU_z.argtypes = \
lib.ElSolveAfterLUDist_s.argtypes = \
lib.ElSolveAfterLUDist_d.argtypes = \
lib.ElSolveAfterLUDist_c.argtypes = \
lib.ElSolveAfterLUDist_z.argtypes = \
  [c_uint,c_void_p,c_void_p]

def SolveAfterLU(orient,A,B):
  if type(A) is not type(B):
    raise Exception('Types of A and B must match')
  if A.tag != B.tag:
    raise Exception('Datatypes of A and B must match')
  args = [orient,A.obj,B.obj]
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElSolveAfterLU_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterLU_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterLU_c(*args)
    elif A.tag == zTag: lib.ElSolveAfterLU_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElSolveAfterLUDist_s(*args)
    elif A.tag == dTag: lib.ElSolveAfterLUDist_d(*args)
    elif A.tag == cTag: lib.ElSolveAfterLUDist_c(*args)
    elif A.tag == zTag: lib.ElSolveAfterLUDist_z(*args)
    else: DataExcept()
  else: TypeExcept()
